--- a/DBManager/pages/header/index.html
+++ b/DBManager/pages/header/index.html
@@ -158,7 +158,7 @@
           <li class="nav-item"><button href="#home" data-bs-target="#home" type="button" data-bs-toggle="pill" role="tab" class="nav-link active" aria-current="page">Home</button></li>
           <li class="nav-item"><button href="#create" data-bs-target="#create" type="button" data-bs-toggle="pill" role="tab" class="nav-link">Create Table</button></li>
           <li class="nav-item"><button href="#read" data-bs-target="#read" type="button" data-bs-toggle="pill" role="tab" class="nav-link">Read Table</button></li>
-
+          <li class="nav-item"><button href="#query" data-bs-target="#query" type="button" data-bs-toggle="pill" role="tab" class="nav-link">Query</button></li>
         </ul>
       </header>
     </div>
@@ -245,7 +245,34 @@
       </div>
     </div>
      </div>
-        
+     <div id="query" role="tabpanel" class="tab-pane fade">
+      <div class="container-fluid">
+        <div class="row">
+          <!-- Left column for query input -->
+          <div class="col-md-8">
+            <div class="mt-4">
+              <label for="sqlQuery" class="form-label">Enter SQL Query:</label>
+              <textarea id="sqlQuery" class="form-control" rows="4" placeholder="Type your SQL query here..."></textarea>
+              <button class="btn btn-primary mt-3" onclick="executeQuery()">Execute Query</button>
+            </div>
+            <!-- Container for query result -->
+            <div id="queryResultContainer" class="mt-4"></div>
+          </div>
+          <!-- Right column for logArea -->
+          <div class="col-md-4">
+            <div class="mt-4">
+              <!-- Log Area -->
+              <div class="mt-4">
+                <label for="logAreaQuery" class="form-label">Database response</label>
+                <div id="logAreaQuery" class="border p-3" style="max-height: 400px; overflow-y: auto;"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+ </div>       
 
   </main>
   <script src="../../../assets/dist/js/bootstrap.bundle.min.js"></script>
@@ -686,10 +713,12 @@ function submitNewRow(tableName, values) {
     .then(data => {
       console.log('Server response:', data);
       if (data.success) {
-        addToLog(`Row added successfully to table ${tableName}!`);
+        addToLogReadTable(`Dodano nowy wiersz do tabeli ${tableName}!`);
 
       } else {
-        console.error('Error creating table:', data.error);
+        console.error('Error adding row:', data.error.detail);
+        addToLogReadTable(`Error podczas dodawania wiersza ${data.error.detail}!`);
+
       }
     })
     .catch(error => {
@@ -706,6 +735,80 @@ function submitNewRow(tableName, values) {
 function cancelAddRow(newRowDiv) {
   newRowDiv.remove();
 }
+function executeQuery() {
+  const sqlQuery = document.getElementById('sqlQuery').value;
+  const logAreaQuery = document.getElementById('logAreaQuery');
+  const queryResultContainer = document.getElementById('queryResultContainer');
+
+  // Clear previous results
+  queryResultContainer.innerHTML = '';
+
+  const apiUrl = 'http://localhost:5001/api/executeQuery';
+
+  fetch(apiUrl, {
+    method: 'POST',
+    headers: {
+      'Content-Type': 'application/json',
+    },
+    body: JSON.stringify({ query: sqlQuery }),
+  })
+    .then(response => response.json())
+    .then(data => {
+      if (data.success) {
+        // Create a table to display the query result
+        const table = document.createElement('table');
+        table.className = 'table table-bordered';
+
+        // Add table header
+        const thead = document.createElement('thead');
+        const headerRow = document.createElement('tr');
+        if (data.result.length > 0) {
+          Object.keys(data.result[0]).forEach(key => {
+            const th = document.createElement('th');
+            th.textContent = key;
+            headerRow.appendChild(th);
+          });
+        }
+        thead.appendChild(headerRow);
+        table.appendChild(thead);
+
+        // Add table body
+        const tbody = document.createElement('tbody');
+        data.result.forEach(row => {
+          const tr = document.createElement('tr');
+          Object.values(row).forEach(value => {
+            const td = document.createElement('td');
+            td.textContent = value;
+            tr.appendChild(td);
+          });
+          tbody.appendChild(tr);
+        });
+        table.appendChild(tbody);
+
+        // Append table to the container
+        queryResultContainer.appendChild(table);
+
+        addToLogQuery(`Query executed successfully!`);
+      } else {
+        console.error('Error executing query:', data.error);
+        addToLogQuery(`Error executing query: ${data.message}`);
+      }
+    })
+    .catch(error => {
+      console.error('Unknown error executing query:', error);
+      addToLogQuery(`Unknown error executing query: ${error}`);
+    });
+}
+
+function addToLogQuery(message) {
+  const logEntry = document.createElement('div');
+  logEntry.textContent = message;
+  logAreaQuery.appendChild(logEntry);
+
+  // Optionally, you can scroll the log area to the bottom to always show the latest entries.
+  logAreaQuery.scrollTop = logAreaQuery.scrollHeight;
+}
+
 </script>
 </body>
 </html>
